--- a/www/index.html
+++ b/www/index.html
@@ -107,8 +107,8 @@
             <div data-role="main" class="ui-content">
                 <center>
                 <p>
-                    <a target="_blank" href="javascript:scan();" style="text-decoration: none"><button class="btn btn-warning">Escanear</button></a>
-                    <a target="_blank" href="#display" style="text-decoration: none"><button class="btn btn-info">Listar Pacientes</button></a>
+                    <a href="javascript:scan();"><button class="btn btn-warning">Escanear</button></a>
+         <a target="_blank" href="#display" style="text-decoration: none"><button class="btn btn-info">Listar Pacientes</button></a>
               <a target="_blank" href="informacion.html"><button class="btn btn-success" >Informacion</button></a>
                     </p>
                     </center>
